test if no bugs on smaller screens

--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -5,13 +5,15 @@
 	padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
 	width: 100%;
 	height: 100%;
-	
  	 }
 
-
-	  #col-remove {
-		flex: none;
-	}
+	 #react-move {
+		position: absolute;
+		position: relative;
+		left: 60%;
+		bottom: 85%;
+	 }
+	 
 
   #container {
 	max-width: none;
@@ -24,6 +26,14 @@
 		width: auto;
 		height: auto;
 		}
+
+			//css for movie case poster
+	#movie-image {
+		// position: absolute;
+		// position: relative;
+		// left: 10%;
+		// bottom: 100px;
+	}
 
 
   //users favorites bookmark css
@@ -110,10 +120,7 @@
 		margin-left: 50%;
 	}
 
-	//css for movie case poster
-	#movie-image {
-		display: none;
-	}
+
 
 	//css for release date, rating, and movie length
 	.movie-stats {
@@ -153,10 +160,10 @@
 		}
 
 		#movie-image {
-			display: block;
+			display: inline;
 		position: relative;
 		top: 35px;
-		width: 100%;
+		width: 25%;
 		height: 100%;
 	}
 	}
